Allow the creator of a game to delete it
