# java/src/main/java/com/adaptionsoft/games/trivia/domain/GameRepository.java
@@ -9,4 +9,6 @@ public interface GameRepository {
     void deleteAll();
 
     Optional<Game> findById(int gameId);
+
+    void deleteGameById(int gameId);
 }
